Bug 103265 - [llvmpipe] piglit depth-tex-compare regression
Summary: [llvmpipe] piglit depth-tex-compare regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
: 103266 103268 103350 (view as bug list)
Depends on: 103350
Blocks:
  Show dependency treegraph
 
Reported: 2017-10-13 21:07 UTC by Vinson Lee
Modified: 2017-10-19 14:34 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2017-10-13 21:07:49 UTC
mesa: 77d3d71f23b32550b045b5f74b7a5e6ca54d83c5 (master 17.3.0-devel)

$ ./bin/depth-tex-compare -auto
Probe color at (23,285)
  Expected: 1.000000 0.000000 1.000000
  Observed: 1.000000 1.000000 1.000000
Probe color at (79,285)
  Expected: 0.000000 0.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (85,285)
  Expected: 0.000000 0.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (91,285)
  Expected: 0.000000 0.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (129,285)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (135,285)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (141,285)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (23,250)
  Expected: 1.000000 0.000000 1.000000
  Observed: 1.000000 1.000000 1.000000
Probe color at (79,250)
  Expected: 0.000000 0.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (129,250)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (23,215)
  Expected: 1.000000 1.000000 1.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (79,215)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 0.000000 0.000000
Probe color at (129,215)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 1.000000 0.000000
Probe color at (23,180)
  Expected: 1.000000 1.000000 1.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (79,180)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 0.000000 0.000000
Probe color at (85,180)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 0.000000 0.000000
Probe color at (91,180)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 0.000000 0.000000
Probe color at (129,180)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 1.000000 0.000000
Probe color at (135,180)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 1.000000 0.000000
Probe color at (141,180)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 1.000000 0.000000
Probe color at (85,75)
  Expected: 0.000000 0.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (91,75)
  Expected: 0.000000 0.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (135,75)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (141,75)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
Probe color at (85,40)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 0.000000 0.000000
Probe color at (91,40)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 0.000000 0.000000
Probe color at (135,40)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 1.000000 0.000000
Probe color at (141,40)
  Expected: 1.000000 0.000000 1.000000
  Observed: 0.000000 1.000000 0.000000
Left to Right: ALPHA, LUMINANCE, INTENSITY
Top to Bottom: LESS, LEQUAL, GREATER, GEQUAL, ALWAYS, NEVER, NOTEQUAL, EQUAL
PIGLIT: {"result": "fail" }


be3ab867bd444594f9d9e0f8e59d305d15769afd is the first bad commit
commit be3ab867bd444594f9d9e0f8e59d305d15769afd
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Mon Oct 2 22:30:55 2017 +0200

    tgsi: implement tgsi_util_get_inst_usage_mask properly
    
    All opcodes are handled.
    
    Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>

:040000 040000 d1db49cee47cbe6ea3ac52d46bbf4a612f14d3be 11c3d50751b4c921bec7cf463e8c52d4162af19e M	src
bisect run success
Comment 1 Roland Scheidegger 2017-10-13 21:57:36 UTC
(In reply to Vinson Lee from comment #0)
> commit be3ab867bd444594f9d9e0f8e59d305d15769afd
> Author: Marek Olšák <marek.olsak@amd.com>
> Date:   Mon Oct 2 22:30:55 2017 +0200
> 
>     tgsi: implement tgsi_util_get_inst_usage_mask properly
>     
>     All opcodes are handled.
>     
>     Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>


Looks buggy indeed - for texture opcodes it tries to subtract the shadow coord from dimension for dim_layer however the value from tgsi_util_get_texture_coord_dim() never includes that in the first place. And therefore dim_layer_shadow (which is used to determine the mask in this case) would be wrong too (just XY instead of XYZ for 2d shadow texture).
Comment 2 Roland Scheidegger 2017-10-18 19:15:08 UTC
*** Bug 103350 has been marked as a duplicate of this bug. ***
Comment 3 Roland Scheidegger 2017-10-18 19:15:37 UTC
*** Bug 103268 has been marked as a duplicate of this bug. ***
Comment 4 Roland Scheidegger 2017-10-18 19:16:25 UTC
*** Bug 103266 has been marked as a duplicate of this bug. ***
Comment 5 Roland Scheidegger 2017-10-19 14:34:49 UTC
Fixed by 77b8392858815625ee7909cf9e866043dab9d074.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.